force-app/main/default/objects/b3o__Candidate_Scorecard__c/b3o__Candidate_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Assessment Scorecard</label>
    <nameField>
        <displayFormat>SCORECARD-{0}</displayFormat>
        <label>Candidate Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>