force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__Actual_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>b3o__Actual_Start_Time__c</fullName>
    <label>Actual Start Time</label>
    <type>DateTime</type>
</CustomField>