force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__Question_Set__c.field-meta.xml
<CustomField>
    <fullName>b3o__Question_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question Set</label>
    <referenceTo>b3o__Question_Set__c</referenceTo>
    <relationshipLabel>Candidate Scorecards</relationshipLabel>
    <relationshipName>Candidate_Scorecards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>