force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__Result__c.field-meta.xml
<CustomField>
    <fullName>b3o__Result__c</fullName>
    <formula>if( b3o__Tally_Up_Score__c  &gt;= b3o__Question_Set__r.b3o__Passing_Score__c, &apos;Pass&apos;, &apos;Fail&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>