force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__Score__c.field-meta.xml
<CustomField>
    <fullName>b3o__Score__c</fullName>
    <label>Score (DNU)</label>
    <summarizedField>b3o__Question_Response__c.b3o__Score__c</summarizedField>
    <summaryForeignKey>b3o__Question_Response__c.b3o__Candidate_Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>