force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__Tally_Up_Score__c.field-meta.xml
<CustomField>
    <fullName>b3o__Tally_Up_Score__c</fullName>
    <inlineHelpText>Total score across all Assessment Responses</inlineHelpText>
    <label>Score</label>
    <summarizedField>b3o__Assessment_Response__c.b3o__Score__c</summarizedField>
    <summaryForeignKey>b3o__Assessment_Response__c.b3o__Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>