force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__Total_Score__c.field-meta.xml
<CustomField>
    <fullName>b3o__Total_Score__c</fullName>
    <label>Total Responses (DNU)</label>
    <summaryForeignKey>b3o__Question_Response__c.b3o__Candidate_Scorecard__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>