force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__Version_ID__c.field-meta.xml
<CustomField>
    <fullName>b3o__Version_ID__c</fullName>
    <label>Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>