force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__View_Response__c.field-meta.xml
<CustomField>
    <fullName>b3o__View_Response__c</fullName>
    <formula>HYPERLINK(&quot;/apex/b3o__PreviewAssessment?id=&quot;&amp;Id,&apos;Click Here&apos;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Response</label>
    <type>Text</type>
</CustomField>