force-app/main/default/objects/b3o__Candidate_Scorecard__c/fields/b3o__X3B_Application__c.field-meta.xml
<CustomField>
    <fullName>b3o__X3B_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3B Application</label>
    <referenceTo>b3o__Application__c</referenceTo>
    <relationshipLabel>Candidate Scorecards</relationshipLabel>
    <relationshipName>Candidate_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>